--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,10 @@ classifiers = [
 dependencies = [
     "Orange3 >= 3.39.0",
     "orange-canvas-core >= 0.1.28",
-    "orange-widget-base >= 4.20.0"
+    "orange-widget-base >= 4.20.0",
+    "opencv-python >= 4.12",
+    "keras => 3.10.0",
+    "tf_keras => 2.19.0"
 ]
 
 [license]
