--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,8 +24,8 @@ dependencies = [
     "orange-canvas-core >= 0.1.28",
     "orange-widget-base >= 4.20.0",
     "opencv-python >= 4.12",
-    "keras => 3.10.0",
-    "tf_keras => 2.19.0"
+    "keras >= 3.10.0",
+    "tf_keras >= 2.19.0"
 ]
 
 [license]
