--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "orange3-imagenets"
-version = "0.0.1"
+version = "0.0.2"
 description = "A collection of Orange3 widgets for training and applying neural networks to images"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -23,6 +23,7 @@ dependencies = [
     "Orange3 >= 3.39.0",
     "orange-canvas-core >= 0.1.28",
     "orange-widget-base >= 4.20.0",
+    "Orange3-ImageAnalytics >= 0.13.0",
     "opencv-python >= 4.12",
     "keras >= 3.10.0",
     "tf_keras >= 2.19.0"
