--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
     "orange-canvas-core >= 0.1.28",
     "orange-widget-base >= 4.20.0",
     "Orange3-ImageAnalytics >= 0.13.0",
-    "opencv-python >= 4.12",
+    "opencv-python-headless >= 4.12",
     "keras >= 3.10.0",
     "tf_keras >= 2.19.0"
 ]
